--- a/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
+++ b/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
@@ -74,8 +74,8 @@ grestore
 \usepackage{wrapfig}
 \usepackage{dsfont}
 \usepackage{soul}
-%\usepackage[backend=bibtex,style=alphabetic]{biblatex}
-%\addbibresource{sample.bib}
+% \usepackage[backend=bibtex,style=alphabetic]{biblatex}
+% \addbibresource{sample.bib}
 
 \usepackage{csquotes}
 \usepackage{hyperref}
@@ -696,16 +696,16 @@ deal with the complexity arising from the introduction of the network structure 
 
 % BibTeX users please use one of
 %bibliographystyle{spbasic}      % basic style, author-year citations
-\bibliographystyle{spmpsci}      % mathematics and physical sciences
+%\bibliographystyle{spmpsci}      % mathematics and physical sciences
 %\bibliographystyle{spphys}       % APS-like style for physics
-\bibliography{sample}   % name your BibTeX data base
+%\bibliography{sample}   % name your BibTeX data base
 
-% \printbibliography[
-% heading=bibintoc,
-% title={Bibliography}]
+%\printbibliography[
+%heading=bibintoc,
+%title={Bibliography}]
 
 % % Non-BibTeX users please use
-% \begin{thebibliography}{}
+\begin{thebibliography}{}
 % %
 % % and use \bibitem to create references. Consult the Instructions
 % % for authors for reference list style.
@@ -719,8 +719,8 @@ deal with the complexity arising from the introduction of the network structure 
 % % etc
 
 
-% \bibitem{European_H2_Market_landscape}
-% Author, European Hydrogen Market Landscape - November 2023 Report, page numbers. Publisher, place (year)
+\bibitem{European_H2_Market_landscape}
+Author, European Hydrogen Market Landscape - November 2023 Report, page numbers. Publisher, place (year)
 
 % %@article{European_H2_Market_landscape,
 % %title = {European Hydrogen Market Landscape - November 2023 Report},
@@ -848,7 +848,7 @@ deal with the complexity arising from the introduction of the network structure 
 
 
 
-% \end{thebibliography}
+\end{thebibliography}
 
 \end{document}
 % end of file template.tex
